[gd_scene load_steps=31 format=3 uid="uid://b4uxwi5widgdv"]

[ext_resource type="Script" path="res://src/scripts/physics_object.gd" id="1_avn41"]
[ext_resource type="PackedScene" uid="uid://bbjocxetmglxp" path="res://src/scenes/components/health_component.tscn" id="2_0kkca"]
[ext_resource type="PackedScene" uid="uid://bwy84paprocp2" path="res://src/scenes/components/hitbox_component.tscn" id="3_orpy6"]
[ext_resource type="AudioStream" uid="uid://d23mt1ybipduc" path="res://assets/sounds/from_hl2/physics/cardboard/cardboard_box_impact_hard1.wav" id="4_4ggl3"]
[ext_resource type="AudioStream" uid="uid://bhwhrxgdyy1v0" path="res://assets/sounds/from_hl2/physics/cardboard/cardboard_box_impact_soft1.wav" id="4_v3f4x"]
[ext_resource type="AudioStream" uid="uid://cwrqtsgcb5p1a" path="res://assets/sounds/from_hl2/physics/cardboard/cardboard_box_impact_hard2.wav" id="5_ibx2u"]
[ext_resource type="AudioStream" uid="uid://glknvivmtb3a" path="res://assets/sounds/from_hl2/physics/cardboard/cardboard_box_impact_soft2.wav" id="5_u0vx1"]
[ext_resource type="AudioStream" uid="uid://b4ae0ksbq85pj" path="res://assets/sounds/from_hl2/physics/cardboard/cardboard_box_impact_soft3.wav" id="6_bj5lt"]
[ext_resource type="AudioStream" uid="uid://dw5khke7ruovw" path="res://assets/sounds/from_hl2/physics/cardboard/cardboard_box_impact_hard3.wav" id="6_u8jln"]
[ext_resource type="AudioStream" uid="uid://dsne1a1sinfeh" path="res://assets/sounds/from_hl2/physics/cardboard/cardboard_box_impact_hard4.wav" id="7_6dtw1"]
[ext_resource type="AudioStream" uid="uid://bu0yecg4d3m3c" path="res://assets/sounds/from_hl2/physics/cardboard/cardboard_box_impact_soft4.wav" id="7_n1w2f"]
[ext_resource type="AudioStream" uid="uid://dtv8n3k6124wr" path="res://assets/sounds/from_hl2/physics/cardboard/cardboard_box_impact_soft5.wav" id="8_shqqo"]
[ext_resource type="AudioStream" uid="uid://dhus8cudio1p0" path="res://assets/sounds/from_hl2/physics/cardboard/cardboard_box_impact_hard5.wav" id="8_wp7sn"]
[ext_resource type="AudioStream" uid="uid://r3gmmpguj8vt" path="res://assets/sounds/from_hl2/physics/cardboard/cardboard_box_impact_soft6.wav" id="9_7jdaf"]
[ext_resource type="AudioStream" uid="uid://kge8n6iljqm" path="res://assets/sounds/from_hl2/physics/cardboard/cardboard_box_impact_hard6.wav" id="9_skccj"]
[ext_resource type="AudioStream" uid="uid://by88xd1owedmg" path="res://assets/sounds/from_hl2/physics/cardboard/cardboard_box_impact_soft7.wav" id="10_8p06f"]
[ext_resource type="AudioStream" uid="uid://1fif4l5do380" path="res://assets/sounds/from_hl2/physics/cardboard/cardboard_box_impact_hard7.wav" id="10_26n5s"]
[ext_resource type="AudioStream" uid="uid://be47y1rp77v2y" path="res://assets/sounds/from_hl2/physics/cardboard/cardboard_box_impact_bullet1.wav" id="18_w5v3q"]
[ext_resource type="AudioStream" uid="uid://coghgennl3jtj" path="res://assets/sounds/from_hl2/physics/cardboard/cardboard_box_impact_bullet2.wav" id="19_3s1im"]
[ext_resource type="AudioStream" uid="uid://dda88lsxi5j3p" path="res://assets/sounds/from_hl2/physics/cardboard/cardboard_box_impact_bullet3.wav" id="20_vh2mt"]
[ext_resource type="AudioStream" uid="uid://b8fd5gmpchy8e" path="res://assets/sounds/from_hl2/physics/cardboard/cardboard_box_impact_bullet4.wav" id="21_47f6k"]
[ext_resource type="AudioStream" uid="uid://cjks4f32r0wfw" path="res://assets/sounds/from_hl2/physics/cardboard/cardboard_box_impact_bullet5.wav" id="22_m5431"]
[ext_resource type="AudioStream" uid="uid://c0nd01p4w2cew" path="res://assets/sounds/from_hl2/physics/cardboard/cardboard_box_scrape_smooth_loop1.wav" id="23_kqco1"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_11xns"]
albedo_color = Color(0.637506, 0.520158, 0.185839, 1)

[sub_resource type="BoxMesh" id="BoxMesh_aytcl"]

[sub_resource type="BoxShape3D" id="BoxShape3D_escso"]

[sub_resource type="BoxShape3D" id="BoxShape3D_5ebn6"]
size = Vector3(1.05, 1.05, 1.05)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_d5ng7"]
random_pitch = 1.1
random_volume_offset_db = 4.0
streams_count = 7
stream_0/stream = ExtResource("4_v3f4x")
stream_1/stream = ExtResource("5_u0vx1")
stream_2/stream = ExtResource("6_bj5lt")
stream_3/stream = ExtResource("7_n1w2f")
stream_4/stream = ExtResource("8_shqqo")
stream_5/stream = ExtResource("9_7jdaf")
stream_6/stream = ExtResource("10_8p06f")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_xgj3q"]
random_pitch = 1.1
random_volume_offset_db = 4.0
streams_count = 7
stream_0/stream = ExtResource("4_4ggl3")
stream_1/stream = ExtResource("5_ibx2u")
stream_2/stream = ExtResource("6_u8jln")
stream_3/stream = ExtResource("7_6dtw1")
stream_4/stream = ExtResource("8_wp7sn")
stream_5/stream = ExtResource("9_skccj")
stream_6/stream = ExtResource("10_26n5s")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_gd4aw"]
streams_count = 5
stream_0/stream = ExtResource("18_w5v3q")
stream_1/stream = ExtResource("19_3s1im")
stream_2/stream = ExtResource("20_vh2mt")
stream_3/stream = ExtResource("21_47f6k")
stream_4/stream = ExtResource("22_m5431")

[node name="TestBox" type="RigidBody3D"]
collision_layer = 16
collision_mask = 19
center_of_mass_mode = 1
contact_monitor = true
max_contacts_reported = 16
script = ExtResource("1_avn41")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
material_override = SubResource("StandardMaterial3D_11xns")
mesh = SubResource("BoxMesh_aytcl")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_escso")

[node name="HealthComponent" parent="." instance=ExtResource("2_0kkca")]
invincible = true

[node name="HitboxComponent" parent="." instance=ExtResource("3_orpy6")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitboxComponent"]
shape = SubResource("BoxShape3D_5ebn6")

[node name="Sounds" type="Node3D" parent="."]

[node name="ImpactSoft" type="AudioStreamPlayer3D" parent="Sounds"]
stream = SubResource("AudioStreamRandomizer_d5ng7")
unit_size = 0.2
max_distance = 50.0
max_polyphony = 3
bus = &"SFX"

[node name="ImpactHard" type="AudioStreamPlayer3D" parent="Sounds"]
stream = SubResource("AudioStreamRandomizer_xgj3q")
unit_size = 0.2
max_distance = 50.0
max_polyphony = 3
bus = &"SFX"

[node name="ImpactBullet" type="AudioStreamPlayer3D" parent="Sounds"]
stream = SubResource("AudioStreamRandomizer_gd4aw")
unit_size = 0.2
max_distance = 50.0
max_polyphony = 3
bus = &"SFX"

[node name="Scrape" type="AudioStreamPlayer3D" parent="Sounds"]
stream = ExtResource("23_kqco1")
unit_size = 0.2
max_distance = 50.0
bus = &"SFX"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
